# markstore

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  db.rs  document.rs  embed.rs  error.rs  fetch.rs  graph.rs  main.rs  search.rs  store.rs  watch.rs
